@@ -104,7 +104,15 @@ install-data-local:
 	-@INSTALL@ -m 0644 $(srcdir)/html/*.html $(DESTDIR)$(TARGET_DIR)/html
 	-@INSTALL@ -m 0644 $(srcdir)/html/*.png $(DESTDIR)$(TARGET_DIR)/html
 	-@INSTALL@ -m 0644 $(srcdir)/html/index.sgml $(DESTDIR)$(TARGET_DIR)/html
+	$(mkinstalldirs) $(DESTDIR)$(TARGET_DIR)/tutorial
+	-@INSTALL@ -m 0644 $(srcdir)/tutorial/*.* \
+		$(DESTDIR)$(TARGET_DIR)/tutorial
+	$(mkinstalldirs) $(DESTDIR)$(TARGET_DIR)/tutorial/images
+	-@INSTALL@ -m 0644 $(srcdir)/tutorial/images/*.* \
+		$(DESTDIR)$(TARGET_DIR)/tutorial/images
+	$(mkinstalldirs) $(DESTDIR)$(TARGET_DIR)/tutorial/images/callouts
+	-@INSTALL@ -m 0644 $(srcdir)/tutorial/images/callouts/*.* \
+		$(DESTDIR)$(TARGET_DIR)/tutorial/images/callouts
 	-(cd $(DESTDIR); gtkdoc-fixxref --module=libxml --html-dir=$(HTML_DIR))
-	-@(tar cf - tutorial | (cd $(DESTDIR)$(TARGET_DIR) && tar xvf -))
 
 .PHONY : html xml templates scan
